fixing header alignment

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,7 +3,7 @@ body {
 }
 
 .wrapper {
-  width: 1220px;
+  width: 1196px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -11,6 +11,8 @@ body {
 
 .navbar {
   height: 145px;
+  margin-left: 4px;
+  margin-right: 6px;
 }
 
 .navbar-inner {
@@ -30,6 +32,7 @@ nav .avatar {
 nav .main {
   padding-top: 20px;
   padding-left: 22px;
+  font-size: 16px;
 }
 
 .navbar-inverse .brand, .navbar-inverse .nav > li > a.active {
@@ -51,7 +54,7 @@ nav h1.offset3 {
 }
 
 nav div.offset3 {
-  padding-left: 63px;
+  padding-left: 35px;
 }
 
 section .sidebar li {
